<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <!--
     Copyright (C) 2006 Joe Walnes.
     Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017, 2018, 2019, 2020, 2021, 2022 XStream committers.
     All rights reserved.
     
     The software in this package is published under the terms of the BSD
     style license a copy of which has been included with this distribution in
     the LICENSE.txt file.
     
     Created on 29. July 2006 by Mauro Talevi
     -->
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.thoughtworks.xstream</groupId>
    <artifactId>xstream-parent</artifactId>
    <version>1.5.0-SNAPSHOT</version>
  </parent>
  <artifactId>xstream</artifactId>
  <packaging>jar</packaging>
  <name>XStream Core</name>

  <dependencies>
    <dependency>
      <groupId>org.dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom2</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.woodstox</groupId>
      <artifactId>woodstox-core</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>stax</groupId>
      <artifactId>stax</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xom</groupId>
      <artifactId>xom</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.github.x-stream</groupId>
      <artifactId>mxparser</artifactId>
    </dependency>

    <dependency>
      <groupId>net.sf.kxml</groupId>
      <artifactId>kxml2-min</artifactId>
      <optional>true</optional>
    </dependency>

<!-- Registers itself as Service like Xpp3
    <dependency>
      <groupId>net.sf.kxml</groupId>
      <artifactId>kxml2</artifactId>
      <optional>true</optional>
    </dependency>
-->

    <dependency>
      <groupId>xpp3</groupId>
      <artifactId>xpp3_min</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib-nodep</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.codehaus.jettison</groupId>
      <artifactId>jettison</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>jakarta.activation</groupId>
      <artifactId>jakarta.activation-api</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <scope>provided</scope><!-- only required for compilation with Java 11 or higher, but only used by Java 7 or below -->
    </dependency>

    <!-- test-scoped -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>

    <dependency>
      <groupId>jmock</groupId>
      <artifactId>jmock</artifactId>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.megginson.sax</groupId>
      <artifactId>xml-writer</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-rt</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>javax.xml.ws</groupId>
          <artifactId>jaxws-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.istack</groupId>
          <artifactId>istack-commons-runtime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.xml.bind</groupId>
          <artifactId>jaxb-impl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.xml.messaging.saaj</groupId>
          <artifactId>saaj-impl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.xml.stream.buffer</groupId>
          <artifactId>streambuffer</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.xml.ws</groupId>
          <artifactId>policy</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.org.apache.xml.internal</groupId>
          <artifactId>resolver</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.glassfish.gmbal</groupId>
          <artifactId>gmbal-api-only</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.jvnet</groupId>
          <artifactId>mimepull</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.jvnet.staxex</groupId>
          <artifactId>stax-ex</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>complete-test-classpath</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <outputDirectory>target/lib</outputDirectory>
              <artifactItems>
                <artifactItem>
                  <groupId>proxytoys</groupId>
                  <artifactId>proxytoys</artifactId>
                  <version>0.2.1</version>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
          <execution>
            <id>collect-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>target/dependencies</outputDirectory>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/AbstractAcceptanceTest.*</include>
                <include>META-INF/LICENSE</include>
              </includes>
              <archive combine.children="append">
                <manifestEntries>
                  <Specification-Title>${project.name} Test</Specification-Title>
                  <Implementation-Title>${project.name} Test</Implementation-Title>
                  <Bundle-License>BSD-3-Clause</Bundle-License>
                </manifestEntries>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk17</id>
      <activation>
        <jdk>17</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <additionalJOptions>
                <additionalJOption>--add-modules=jdk.unsupported</additionalJOption>
              </additionalJOptions>
              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jdk16-ge</id>
      <activation>
        <jdk>[16,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <testExcludes>
                <exclude>**/Record**</exclude>
              </testExcludes>
            </configuration>
            <executions>
              <execution>
                <id>compile-jdk16</id>
                <configuration>
                  <release>16</release>
                  <testExcludes combine.self="override" />
                  <testIncludes>
                    <include>**/Record**</include>
                  </testIncludes>
                </configuration>
                <goals>
                  <goal>testCompile</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jdk15</id>
      <activation>
        <jdk>15</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <testExcludes>
                <exclude>**/Record**</exclude>
              </testExcludes>
            </configuration>
            <executions>
              <execution>
                <id>compile-jdk15</id>
                <configuration>
                  <release>15</release>
                  <testExcludes combine.self="override" />
                  <testIncludes>
                    <include>**/Record**</include>
                  </testIncludes>
                  <compilerArgs>
                    <arg>--enable-preview</arg>
                  </compilerArgs>
                </configuration>
                <goals>
                  <goal>testCompile</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <properties>
        <surefire.preview.arg>--enable-preview</surefire.preview.arg>
      </properties>
    </profile>
    <profile>
      <id>jdk11-ge-jdk14</id>
      <activation>
        <jdk>[11,15)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <testExcludes>
                <exclude>**/Record**</exclude>
              </testExcludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jdk11-ge</id>
      <activation>
        <jdk>[11,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <compilerArgs>
                <arg>-XDignore.symbol.file</arg>
              </compilerArgs>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <dependencies>
              <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${version.jakarta.xml.bind.api}</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${version.plugin.maven.surefire}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${version.plugin.jacoco}</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <properties>
    <bundle.export.package>!com.thoughtworks.xstream.core.util,com.thoughtworks.xstream.*;-noimport:=true</bundle.export.package>
    <bundle.import.package>
        org.xmlpull.mxp1;resolution:=optional,
        org.xmlpull.v1;resolution:=optional,
        io.github.xstream.mxparser.*;resolution:=optional,
        com.ctc.*;resolution:=optional,
        com.ibm.*;resolution:=optional,
        com.sun.*;resolution:=optional,
        javax.*;resolution:=optional,
        org.xml.*;resolution:=optional,
        sun.*;resolution:=optional,
        *
    </bundle.import.package>
    <surefire.argline>${surefire.preview.arg}
      --add-opens java.base/java.lang=ALL-UNNAMED
      --add-opens java.base/java.util=ALL-UNNAMED
      --add-opens java.base/java.io=ALL-UNNAMED
      --add-opens java.base/java.time=ALL-UNNAMED
      --add-opens java.base/java.time.chrono=ALL-UNNAMED
      --add-opens java.base/java.lang.invoke=ALL-UNNAMED
      --add-opens java.base/java.lang.ref=ALL-UNNAMED
      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
      --add-opens java.base/java.text=ALL-UNNAMED
      --add-opens java.base/javax.security.auth.x500=ALL-UNNAMED
      --add-opens java.base/sun.util.calendar=ALL-UNNAMED
      --add-opens java.desktop/java.beans=ALL-UNNAMED
      --add-opens java.desktop/java.awt=ALL-UNNAMED
      --add-opens java.desktop/java.awt.font=ALL-UNNAMED
      --add-opens java.desktop/javax.swing=ALL-UNNAMED
      --add-opens java.desktop/javax.swing.border=ALL-UNNAMED
      --add-opens java.desktop/javax.swing.event=ALL-UNNAMED
      --add-opens java.desktop/javax.swing.table=ALL-UNNAMED
      --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
      --add-opens java.desktop/javax.swing.plaf.metal=ALL-UNNAMED
      --add-opens java.desktop/javax.imageio=ALL-UNNAMED
      --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED
      --add-opens java.desktop/sun.swing=ALL-UNNAMED
      --add-opens java.desktop/sun.swing.table=ALL-UNNAMED
      --add-opens java.xml/javax.xml.datatype=ALL-UNNAMED
      --add-opens java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
      --add-opens java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
      --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
    </surefire.argline>
    <surefire.preview.arg/>
  </properties>

</project>
